// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests LoadingSpinner Default 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-loading-spinner"
    data-transparent={false}
    role="progressbar"
    style={
      Object {
        "--charcoal-loading-spinner-padding": "16px",
        "--charcoal-loading-spinner-size": "48px",
      }
    }
  >
    <div
      className="charcoal-loading-spinner-icon"
      data-once={false}
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storybook Tests LoadingSpinner Padding 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-loading-spinner"
    data-transparent={false}
    role="progressbar"
    style={
      Object {
        "--charcoal-loading-spinner-padding": "24px",
        "--charcoal-loading-spinner-size": "48px",
      }
    }
  >
    <div
      className="charcoal-loading-spinner-icon"
      data-once={false}
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storybook Tests LoadingSpinner Size 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-loading-spinner"
    data-transparent={false}
    role="progressbar"
    style={
      Object {
        "--charcoal-loading-spinner-padding": "16px",
        "--charcoal-loading-spinner-size": "128px",
      }
    }
  >
    <div
      className="charcoal-loading-spinner-icon"
      data-once={false}
      role="presentation"
    />
  </div>
</div>
`;

exports[`Storybook Tests LoadingSpinner Transparent 1`] = `
<div
  data-dark={false}
>
  <div
    className="charcoal-loading-spinner"
    data-transparent={true}
    role="progressbar"
    style={
      Object {
        "--charcoal-loading-spinner-padding": "16px",
        "--charcoal-loading-spinner-size": "48px",
      }
    }
  >
    <div
      className="charcoal-loading-spinner-icon"
      data-once={false}
      role="presentation"
    />
  </div>
</div>
`;
